# condor_rest

./: .gitignore  Dockerfile  pyproject.toml  spin.Dockerfile  submit_rest.sh  supervisord.conf
.github/workflows/: build-docker.yml  pytest.yml
htcondor_configs/: 95-NERSC.conf  pre-exec.sh  start.sh  submit_rest.sh  supervisord.conf
src/htcondor_rest/: __init__.py  app.py
src/htcondor_rest/models/: __init__.py
tests/: test.py  test_api.py
